--- a/templates/rah/home_logged_out.html
+++ b/templates/rah/home_logged_out.html
@@ -2,45 +2,11 @@
 {% load dated_static %}
 {% block rah_nav_select %}nav_home{% endblock %}
 {% block right_content %}
-<div id="home_page_header" class="box_three_middle">
-    <div id="home_page_vampire_copy">
-        <h1>Vampire Power Challenge</h1>
-        <p>
-            There are vampires in your home &mdash; energy vampires. Day and night, they silently suck energy and money
-            away from your home. It's time to slay these energy hogs.
-        </p>
-        <p>
-            Commit to making your home and community a vampire-free zone. And don't forget to download your free Halloween decorations.
-        </p> 
-        <p class="center orange">
-            <a href="{% url vampire_hunt %}" class="button" id="home_page_join_button">Join the Hunt</a>
-        </p>
-    </div>
-    <div id="home_page_vampire_star">
-        <a href="" class="orange">Jane C. Doe</a><br/>
-        from Washington, DC<br/>
-        is the latest and<br/>
-        <div id="home_page_slayer_count">1,271<sup>st</sup></div>
-        Vampire Slayer.
-    </div>
+<div class="grid_9 alpha omega">
+    {% include "rah/_vampire_block.html" %}
 </div>
 <div class="grid_6 alpha">
-    <div id="home_page_sticker" class="box_two_middle">
-        <div id="home_page_sticker_copy">
-            <b>The October 10<sup>th</sup></b>
-            <h1 class="blue_dark">Coal Challenge</h1>
-            <p>
-                <span class="blue_dark"><b>We did it!</b></span> Repower at Home trendsetters met our goal of saving <span
-                class="blue_dark"><b>7 million pounds of coal</b></span> by October 10.
-            </p>
-            <p>
-                Show the world you made a difference with <b class="blue_dark">Free Trendsetter sticker</b>.
-            </p>
-            <p>
-                <a href="{% url trendsetter_sticker %}" class="button">Claim Your Sticker</a>
-            </p>
-        </div>
-    </div>
+    {% include "rah/_sticker_block.html" %}
 </div>
 <div class="grid_3 omega">
     <div class="box_one_top"></div>
