--- a/templates/rah/_vampire_block.html
+++ b/templates/rah/_vampire_block.html
@@ -13,10 +13,18 @@
         </p>
     </div>
     <div id="home_page_vampire_star">
-        <a href="" class="orange">Jane C. Doe</a><br/>
-        from Washington, DC<br/>
-        is the latest and<br/>
-        <div id="home_page_slayer_count">1,271<sup>st</sup></div>
-        Vampire Slayer.
+        <b class="orange">
+            {% if last_slayer_is_user %}
+                <a href="{% url profile last_slayer.id %}"  class="orange">{{ last_slayer.get_full_name }}</a>
+            {% else %}
+                {{ last_slayer.get_full_name }}
+            {% endif %}
+        </b><br/>
+        {% if last_slayer_loc %}
+            from {{ last_slayer_loc }}<br/>
+        {% endif %}
+        is the latest of<br/>
+        <div id="home_page_slayer_count">{{ slayers }}</div>
+        Vampire Slayers.
     </div>
 </div>
