fixing typo on sticker block.

--- a/templates/rah/_sticker_block.html
+++ b/templates/rah/_sticker_block.html
@@ -7,7 +7,7 @@
             class="blue_dark"><b>7 million pounds of coal</b></span> by October 10.
         </p>
         <p>
-            Show the world you made a difference with <b class="blue_dark">Free Trendsetter sticker</b>.
+            Show the world you made a difference with your <b class="blue_dark">free Trendsetter sticker</b>.
         </p>
         <p>
             <a href="{% url trendsetter_sticker %}" class="button">Claim Your Sticker</a>
