Fixing errant line break in url template tag

--- a/commitments/templates/commitments/show.html
+++ b/commitments/templates/commitments/show.html
@@ -10,9 +10,9 @@
         from the commitment card. Your new Trendsetters will be able to update their progress and commit to new actions.
     </p>
     <p>
-        Want to learn more about what commitment cards are and how they’re collected? Visit the <a href="{% url
-        events_show %}">events page</a>, or <a href="mailto:field@repowerathome.com?subject=Commitment%20Cards"
-        title="">email a field organizer</a>.
+        Want to learn more about what commitment cards are and how they’re collected? Visit the 
+        <a href="{% url event-show %}">events page</a>, or 
+        <a href="mailto:field@repowerathome.com?subject=Commitment%20Cards">email a field organizer</a>.
     </p>
     <p>
         <a href="{% url commitments_card_create %}" class="button">Enter a new commitment card</a>
