--- a/commitments/templates/commitments/_card.html
+++ b/commitments/templates/commitments/_card.html
@@ -1,70 +1,93 @@
-<h1>Commitment Card</h1>
-<form action="" method="post">
-    {% for error in contrib_form.non_field_errors %}
-        <div class="overset_form_message error">{{ error }}</div>
-    {% endfor %}
-    {% for field in contrib_form.visible_fields %}
-        <div class="form_row {% if field.errors %}error{% endif %} {% if field.name == 'first_name' %}form_row_float form_row_float_left_field{% endif%} {% if field.name == 'last_name' %}form_row_float{% endif%}">
-            {% if "CheckboxInput" in field.field.widget|pprint %}
-                {{ field }}{{ field.label_tag }}
-            {% else %}
-                {{ field.label_tag }}{{ field }}
-            {% endif %}
-            {% for error in field.errors %}
-                <label class="error" for="{{ field.auto_id }}">{{ error|escape }}</label>
+<h1 style="float:left;">Commitment Card</h1>
+<form style="float:right; margin-right:85px;" action="" method="get" id="commitment_card_select_form">
+    <div class="form_row">
+        <label for="id_form_name">Select Commitment Card</label>
+        <select name="form_name" id="id_form_name" onchange="">
+        {% for survey in survey_types %}
+            <option value="{{survey.form_name}}" {% if current_form_name == survey.form_name %}selected="selected"{% endif %}>
+                {{survey.name}}
+            </option>
+        {% endfor %}
+        </select>        
+    </div>
+    {% if not request.is_ajax %}
+        <div>
+            <button type="submit" id="commitment_card_select_submit">Change commitment card</button>
+        </div>
+    {% endif %}
+</form>
+<br class="clear"/>
+<form action="" method="post" id="commitment_card_form">
+    <div style="width:350px; float:left;">    
+        {% for error in contrib_form.non_field_errors %}
+            <div class="overset_form_message error">{{ error }}</div>
+        {% endfor %}
+        {% for field in contrib_form.visible_fields %}
+            <div class="form_row {% if field.errors %}error{% endif %} {% if field.name == 'first_name' %}form_row_float form_row_float_left_field{% endif%} {% if field.name == 'last_name' %}form_row_float{% endif%}">
+                {% if "CheckboxInput" in field.field.widget|pprint %}
+                    {{ field }}{{ field.label_tag }}
+                {% else %}
+                    {{ field.label_tag }}{{ field }}
+                {% endif %}
+                {% for error in field.errors %}
+                    <label class="error" for="{{ field.auto_id }}">{{ error|escape }}</label>
+                {% endfor %}
+            </div>
+            {% if field.name == 'last_name' %}<br class="clear"/>{% endif%}
+        {% endfor %}
+        <div class="hidden">
+            {% for field in contrib_form.hidden_fields %}
+                {{ field }}
             {% endfor %}
         </div>
-        {% if field.name == 'last_name' %}<br class="clear"/>{% endif%}
-    {% endfor %}
-    <div class="hidden">
-        {% for field in contrib_form.hidden_fields %}
-            {{ field }}
-        {% endfor %}
     </div>
-    <table>
-        <thead>
-            <tr>
-                <th>Actions</th>
-                <th class="commit_card_choice">
-                    <ul>
-                        <li>Committed</li>
-                        <li>Done</li>
-                    </ul>    
-                </th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for field in survey_form %}
-                {% if field.field.action %}
-                    <tr>
-                        <td>{{ field.label }}</td>
-                        <td class="commit_card_choice">{{ field }}</td>
-                    </tr>
-                {% endif %}
-            {% endfor %}
-        </tbody>
-        <thead>
-            <tr>
-                <th></th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for field in survey_form %}
-                {% if not field.field.action %}
-                    <tr>
-                        <td>{{ field.label }}</td>
-                        <td class="center">{{ field }}</td>
-                    </tr>
-                {% endif %}
-            {% endfor %}
-        </tbody>
-    </table>
-    <br/>
-    <br/>
-    <p class="right">
-        <button type="submit" value="save_and_close" name="submit">Save and close</button>
+    <div id="commitment_card_action_table" style="width:400px; float:left; margin-top:18px;">
+        <table>
+            <thead>
+                <tr>
+                    <th>Actions</th>
+                    <th class="commit_card_choice">
+                        <ul>
+                            <li>Committed</li>
+                            <li>Done</li>
+                        </ul>    
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for field in survey_form %}
+                    {% if field.field.action %}
+                        <tr>
+                            <td>{{ field.label }}</td>
+                            <td class="commit_card_choice">{{ field }}</td>
+                        </tr>
+                    {% endif %}
+                {% endfor %}
+            </tbody>
+            <thead>
+                <tr>
+                    <th></th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for field in survey_form %}
+                    {% if not field.field.action %}
+                        <tr>
+                            <td>{{ field.label }}</td>
+                            <td class="center">{{ field }}</td>
+                        </tr>
+                    {% endif %}
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+    <p class="right {% if request.is_ajax %}hidden{% endif %}">
+        <br class="clear"/>
+        <br class="clear"/>
+        <button type="submit" value="save_and_close" name="submit" id="submit_save_and_close">Save and close</button>
         <button type="submit" value="save_and_add_another" name="submit">Save and add another</button>
+        <input type="submit" name="some_name" value="SUBMIT" id="some_name"/>
     </p>
     {% csrf_token %}
 </form>
