--- a/static/css/style.css
+++ b/static/css/style.css
@@ -575,7 +575,9 @@ Commitments Commitments Commitments Commitments Commitments Commitments Commitme
 .commit_tick {float:left;}
 .commit_check {display:inline-block !important;}
 .commit_totals {font-size:18px; font-weight:bold;}
+.commit_card_choice {width:128px;}
 .commit_card_choice ul li{float:left; width:50%; text-align:center;}
+/*#commitment_card_select_form {position:absolute; top:0; right:0;}*/
 
 /* ---------------------------------------------------------------------------------------------------------------------
 Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc 
