--- a/templates/rah/home_logged_in.html
+++ b/templates/rah/home_logged_in.html
@@ -47,7 +47,7 @@
         <div class="box_one_top"></div>
         <div class="box_one_middle">
             <h3>Commitment Cards</h3>
-            {# <a href="{% url commitments_card_create %}" class="button">Enter a card</a><br/> #}
+            <a href="{% url commitments_card_create %}" class="button commitment_card_open">Enter a card</a><br/>
             <a href="{% url commitments_show %}">Manage commitment cards</a>
         </div>
         <div class="box_one_bottom"></div>
