--- a/static/css/style_ie.css
+++ b/static/css/style_ie.css
@@ -1,2 +1,2 @@
 /* Show things otherwise hidden for typekit on other browsers */
-input, select, textarea, h1, h1 a, .ui-button, #cse_search_box_form label.inside, .button {visibility:visible !important;}
+h1, h1 a, #home_page_join_button, #home_page_slayer_count {visibility:visible !important;}
