--- a/templates/base.html
+++ b/templates/base.html
@@ -60,11 +60,8 @@
                             <input type="hidden" name="cx" value="018322562804099680750:4l5wfmovb4q" />
                             <input type="hidden" name="cof" value="FORID:11" />
                             <input type="hidden" name="ie" value="UTF-8" />
-                            <span class="">
-                                <label class="hidden" for="cse_search_box">Search</label>
-                                <input type="text" name="q" size="31" id="cse_search_box"/>
-                            </span>
-                            <input type="submit" name="sa" value="Go" id="cse_search_box_submit"/>
+                            <input type="text" name="q" size="31" id="cse_search_box"/>
+                            <input type="submit" name="sa" value="Search" id="cse_search_box_submit"/>
                         </div>
                     </form>
                     <div id="nav">
@@ -73,7 +70,6 @@
                         <a href="{% url group_list %}" id="nav_teams">Teams</a>
                         <a href="{% url event-show %}" id="nav_events">Events</a>
                         <a href="{% url blog_index %}" id="nav_blog">Blog</a>
-                        {# <a href="{% url rah.views.feedback %}" id="nav_feedback" class="feedback_link">Feedback</a> #}
                     </div>
                 </div>
             </div>
