--- a/templates/rah/_sticker_block.html
+++ b/templates/rah/_sticker_block.html
@@ -3,8 +3,8 @@
         <b>The October 10<sup>th</sup></b>
         <h1 class="blue_dark">Coal Challenge</h1>
         <p>
-            <span class="blue_dark"><b>We did it!</b></span> Repower at Home trendsetters met our goal of saving <span
-            class="blue_dark"><b>7 million pounds of coal</b></span> by October 10.
+            <span class="blue_dark"><b>We did it!</b></span> Repower at Home trendsetters exceeded our goal of saving 
+            <span class="blue_dark"><b>7 million pounds of coal</b></span> by October 10.
         </p>
         <p>
             Show the world you made a difference with your <b class="blue_dark">free Trendsetter sticker</b>.
