Correcting page title

--- a/templates/rah/sticker_form.html
+++ b/templates/rah/sticker_form.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load dated_static %}
-{% block title %}Get your free vampire sticker{% endblock %}
+{% block title %}Get your free Trendsetter sticker{% endblock %}
 {% block right_content %}
     <div class="grid_6 alpha">
         <div class="box_three_top"></div>
