--- a/invite/templates/invite/invite_form.html
+++ b/invite/templates/invite/invite_form.html
@@ -1,7 +1,26 @@
 <form action="{% url invite-invite %}" method="post" id="invite_form">
-    <p>Share the magic with your friends.</p>
+    {% for error in form.non_field_errors %}
+        <div class="overset_form_message error">{{ error }}</div>
+    {% endfor %}
+    {% for field in form.visible_fields %}
+        <div class="form_row {% if field.errors %}error{% endif %}{% if 'TextInput' in field.field.widget|pprint or 'Textarea' in field.field.widget|pprint %} overset{% endif %}">
+            {% if "CheckboxInput" in field.field.widget|pprint %}
+                {{ field }}{{ field.label_tag }}
+            {% else %}
+                {{ field.label_tag }}{{ field }}
+            {% endif %}
+            <span class="help_text">{{ field.help_text }}</span>
+            {% for error in field.errors %}
+                <label class="error" for="{{ field.auto_id }}">{{ error|escape }}</label>
+            {% endfor %}
+        </div>
+    {% endfor %}
+    <div class="hidden">
+        {% for field in form.hidden_fields %}
+            {{ field }}
+        {% endfor %}
+    </div>
     <div>
-        {{ form.as_p }}
         <input type="hidden" name="next" value="{{request.path}}"/>
         <input type="submit" name="submit" value="Send Invite" class="invite_form_submit"/>
     </div>
