enhanced the events app to use the new managment scheme, this means the commitment cards are filled out using the standard commitment card form. [completed: 472]

--- a/events/templates/events/_guests_add.html
+++ b/events/templates/events/_guests_add.html
@@ -1,24 +1,6 @@
-<div id="guests_add" class="tabs">
-    <ul>
-        <li><a href="#guests_add_with_invite">Send Invitations</a></li>
-        <li><a href="#guests_add_without_invite">Add without Invite</a></li>
-    </ul>
-    <div id="guests_add_with_invite" class="tab">
-        <form action="{% url event-guests-invite event.id %}" method="post">
-            {% with guest_invite_form as form %}
-                {% include "events/_form.html" %}
-            {% endwith %}
-            {% csrf_token %}
-            <input type="submit" value="Send" /> | <a href="{% url event-guests event.id %}">cancel</a>
-        </form>
-    </div>
-    <div id="guests_add_without_invite" class="tab">
-        <form action="{% url event-guests-add event.id %}" method="post">
-            {% with guest_add_form as form %}
-                {% include "events/_form.html" %}
-            {% endwith %}
-            {% csrf_token %}
-            <input type="submit" value="Add" /> | <a href="{% url event-guests event.id %}">cancel</a>
-        </form>
-    </div>
-</div>
+<form action="{% url event-guests-add event.id %}" method="post">
+    <h1>Add Guest</h1>
+    {% include "events/_form.html" %}
+    {% csrf_token %}
+    <input type="submit" value="Add" /> | <a href="{{ event.get_absolute_url }}">cancel</a>
+</form>
