--- a/templates/_messages.html
+++ b/templates/_messages.html
@@ -60,7 +60,7 @@
                             <script type="text/javascript">_gaq.push(['_trackPageview', '/register/account']);</script>
                         {% endif %}
                     {% else %}
-                        {{ message|safe }} <a href="#" class="dismiss">close</a>
+                        {{ message|safe }} <a href="" class="dismiss">close</a>
                     {% endif %}
                 {% endif %}
             </li>
