--- a/events/templates/events/message.html
+++ b/events/templates/events/message.html
@@ -4,8 +4,7 @@
 {% block breadcrumbs %}
     <a href="{% url index %}">Home</a> &rsaquo;
     <a href="{% url event-show %}">Events</a> &rsaquo;
-    <a href="{% url event-detail event.id %}">{{ event }}</a> &rsaquo;
-    <a href="{% url event-guests event.id %}">Guests</a> &rsaquo;
+    <a href="{{ event.get_absolute_url }}">{{ event }}</a> &rsaquo;
     Message
 {% endblock %}
 {% block right_content %}
@@ -21,7 +20,7 @@
                 {% include "events/_form.html" %}
                 {% csrf_token %}
                 <input type="submit" value="Send" /> |
-                <a href="{% url event-guests event.id %}">cancel</a>
+                <a href="{{ event.get_absolute_url }}">cancel</a>
             </form>
         </div>
         <div class="box_two_bottom"></div>
