--- a/static/css/style.css
+++ b/static/css/style.css
@@ -546,6 +546,15 @@ Events Events Events Events Events Events Events Events Events Events Events Eve
 #event_guests_table .guest_comment { display: inline-table; }
 #rsvp_form .form_row {width:168px;}
 
+.guest_list_col { float: left; margin: 0 15px; width: 185px; }
+.guest { height: 70px; margin-bottom: 10px; }
+.guest .guest_name { font-weight: bold; color: #191919; }
+.guest .notattending { color: #D3363F; }
+.guest .maybeattending { color: #F1BB3B; }
+.guest .guest_icon { display: inline-block; position: relative; top: 3px; cursor: pointer; }
+.guest .commitment_card_open { font-size: 0.9em; }
+.guest .event_host { font-weight: normal; font-style: italic; }
+#event_hosts_form { height: 400px; overflow-y: auto; margin-bottom: 20px; }
 
 /* ---------------------------------------------------------------------------------------------------------------------
 Profile Profile Profile Profile Profile Profile Profile Profile Profile Profile Profile Profile Profile Profile Profile 
@@ -600,6 +609,10 @@ ul.plain_list {margin-left: 0px; padding-left: 0px; list-style: none;}
 .icon_rate_1 {background: url(../images/theme/sprite_minor_col.png?0000000004) -60px -302px;  width:13px; height:17px; display:inline-block;}
 .icon_rate_0 {background: url(../images/theme/sprite_minor_col.png?0000000004) -81px -302px;  width:13px; height:17px; display:inline-block;}
 .icon_flag {background: url(../images/theme/sprite_minor_col.png?0000000004) -101px -302px;  width:14px; height:17px; display:inline-block;}
+
+.file_icon { width: 18px; height: 18px; display: inline-block; position: relative; top: 3px; }
+.pdf_icon { background-image: url(../images/theme/pdf-icon.png?0000000004); }
+.excel_icon { background-image: url(../images/theme/excel-icon.png?0000000004); }
 
 .selector { font-size: 12px; }
 #team_selectors { margin-left: 15px; }
