--- a/static/css/style.css
+++ b/static/css/style.css
@@ -484,6 +484,18 @@ Flagged Flagged Flagged Flagged Flagged Flagged Flagged Flagged Flagged Flagged 
 /* ---------------------------------------------------------------------------------------------------------------------
 Vampire Vampire Vampire Vampire Vampire Vampire Vampire Vampire Vampire Vampire Vampire Vampire Vampire Vampire Vampire 
 --------------------------------------------------------------------------------------------------------------------- */
+/* Vampire landing page*/
+#vampire_decoration_block { 
+    background: transparent url(../images/vampires/decoration.jpg?0000000005) no-repeat top center;
+    height:287px;}
+#vampire_decoration_block p {color:#fff; margin-bottom:9px; padding-top:0px;}
+#vampire_decoration_block #home_page_slayer_count {margin-top:189px;}
+#vampire_bat_small {position:absolute; top:-20px; right:-11px; z-index:1000;}
+#vampire_bat_large {position:absolute; top:990px; right:-130px; z-index:1000;}
+#vampire_bat_med {position:absolute; top:440px; right:450px; z-index:1000;}
+
+
+/* Vampire action */
 #vampire_worksheet { position: relative; }
 ul#vampire_worksheet_wizard_nav {
     display: none;
